<resources>
    <string name="app_name">Top Movies</string>
    <string name="text_popularity">popularity</string>
    <string name="top_rated">rating</string>
    <string name="label_title">Movie title:</string>
    <string name="add_to_favourite">Added to favorites</string>
    <string name="remove_from_favourite">Removed from favorites</string>
    <string name="item_main">Home page</string>
    <string name="item_favourite">Favorites</string>
    <string name="original_name">Original title:</string>
    <string name="rating">Rating:</string>
    <string name="release_date">Release date:</string>
    <string name="description">Description:</string>
</resources>