<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/label_title"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:textColor="@color/grey_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_center"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_label_original_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/original_name"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

    <TextView
        android:id="@+id/text_view_original_title"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:textColor="@color/grey_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

    <TextView
        android:id="@+id/text_view_label_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/rating"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_original_title" />

    <TextView
        android:id="@+id/text_view_rating"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:textColor="@color/grey_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/text_view_original_title" />

    <TextView
        android:id="@+id/text_view_label_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/release_date"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_rating" />

    <TextView
        android:id="@+id/text_view_release_date"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:textColor="@color/grey_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/text_view_rating" />

    <TextView
        android:id="@+id/text_view_label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/description"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_release_date" />

    <TextView
        android:id="@+id/text_view_overview"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        android:gravity="start"
        android:textColor="@color/grey_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_label_description" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_trailers"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_overview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_reviews"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eight_dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_trailers" />

</androidx.constraintlayout.widget.ConstraintLayout>